--- a/try 1.css
+++ b/try 1.css
@@ -1,8 +1,14 @@
 p {
     color: rgb(25, 0, 255);
     font-size: 50px;
+    position: relative;
   }
   h1{
     color: aqua;
     font-size: 75px;
   }
+#text  {
+  font-size: 48px;
+  color: blue;
+  position: relative;
+}
